refactor bb agent to be simpler